--- a/_config.yml
+++ b/_config.yml
@@ -114,10 +114,12 @@ navigation_header:
   url: /cv/
 - title: Posters
   url: /posters/
-- title: Publications
-  url: /publications/
+- title: Blog
+  url: /blog/
 - title: Search
   url: /search/
+- title: Publications
+  url: /publications/
 #- title: Fork Alembic
 #  url: https://github.com/daviddarnes/alembic
 
