--- a/_config.yml
+++ b/_config.yml
@@ -34,6 +34,7 @@ plugins:
 - jekyll-commonmark
 - jekyll-include-cache
 - jemoji
+- jekyll-org
 
 # 3. Gem settings
 paginate: 2 # jekyll-paginate > items per page
